--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,6 @@
+NotUser=No es un usuario
 NotEmpty=El campo no debe estar vacio
 NotEmpty.usuario.nombre=Nombre vacio
 NotEmpty.usuario.username=Username vacio
 Email.usuario.email=Formato de correo incorrecto
+Pattern.usuario.identificador=formato del indentificador incorrecto
