--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,4 @@ NotEmpty.usuario.nombre=Nombre vacio
 NotEmpty.usuario.username=Username vacio
 Email.usuario.email=Formato de correo incorrecto
 Pattern.usuario.identificador=formato del indentificador incorrecto
+IdentificationRegex.usuario.identificador=formato del indentificador incorrecto con anotación
