Validaciones de numeros

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,6 @@ NotEmpty.usuario.username=Username vacio
 Email.usuario.email=Formato de correo incorrecto
 Pattern.usuario.identificador=formato del indentificador incorrecto
 IdentificationRegex.usuario.identificador=formato del indentificador incorrecto con anotación
+Requerido.usuario.apellido=El apellido esta vacio
+typeMismatch.java.lang.Integer=Debe ser un número
+typeMismatch.usuario.cuenta=Debe ser un número entero
