--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,3 +8,5 @@ IdentificationRegex.usuario.identificador=formato del indentificador incorrecto 
 Requerido.usuario.apellido=El apellido esta vacio
 typeMismatch.java.lang.Integer=Debe ser un número
 typeMismatch.usuario.cuenta=Debe ser un número entero
+typeMismatch.java.util.Date=El formato debe ser yyyy-MM-dd
+Past.usuario.fechaNac=No puedes nacer en el futuro
